hphp/test/slow/collection_classes/map-append.php.expectf
Warning: Appending to Map via Pair in %s/hphp/test/slow/collection_classes/map-append.php on line 6

Fatal error: Uncaught exception 'InvalidArgumentException' with message 'Parameter must be an instance of Pair' in %s/collection_classes/map-append.php:8
Stack trace:
%a {main}
